# 37-1

./: CMakeLists.txt  calc.ui  main.cpp
include/: CalcMainWindow.h
src/: CalcMainWindow.cpp
